--- a/index.qmd
+++ b/index.qmd
@@ -3,6 +3,28 @@ title: "Cards to Code"
 format: 
   html
 ---
-Coming October 2024
+A course by Max Chiswick and Ross Rheingans-Yoo on building a basic poker bot from scratch. 
 
-![](assets/aces.png)
+![](assets/kuhn_solve.gif)
+
+The course starts with game theory, then introduces a simplified poker setting, then the elements of the Counterfactual Regret Minimization (CFR) algorithm, and then beyond the vanilla CFR algorithm. 
+
+Throughout the course, we're building up code to first develop the game, and then piece by piece to develop the poker bot. 
+
+We end on opponent modeling and challenge problems that go beyond game theory optimal play. 
+
+**Prerequisites:** Basic Python and math
+
+**Groups/Questions:** We encourage you to work through this in groups. You can chat in our [Discord](https://discord.gg/KZQK2xN8Da) to discuss the course or look for others to work with. 
+
+## [Overbet.ai](https://overbet.ai)
+We're excited about learning through games. 
+
+Visit [Overbet.ai](https://overbet.ai) for daily puzzles that make you think, starting with Rock Paper Scissors. 
+
+We'll have more advanced courses available soon.  
+
+## Why poker? 
+
+
+## AI agents in 2024
