--- a/index.qmd
+++ b/index.qmd
@@ -21,49 +21,209 @@ We end on opponent modeling and challenge problems that go beyond game theory op
 
 **Groups/Questions:** We encourage you to work through this in groups. You can chat in our [Discord](https://discord.gg/KZQK2xN8Da) to discuss the course or look for others to work with. 
 
-## [Overbet.ai](https://overbet.ai)
-We're excited about learning through games. 
+## Set up your environment
+You can use a code editor of your choice. We like [VSCode](https://code.visualstudio.com/). You can also work with [Google Colab](https://colab.research.google.com/) in the browser. The instructions below are for coding locally on MacOS or Unix. 
 
-Visit [Overbet.ai](https://overbet.ai) for daily puzzles that make you think, starting with Rock Paper Scissors. 
+### Step 1: Set up virtual environment
 
-We'll have more advanced courses available soon.  
+1. Make a local directory for the project `cardstocode`. From the command line: 
 
-## Why poker? 
-Let's split this into two questions. 
+```bash
+mkdir cardstocode
+cd cardstocode
+```
 
-### Why play poker?
-Games of incomplete information like poker are most similar to real-life settings. Incomplete information means that there is some hidden information -- in Texas Hold'em this is the opponent cards and the yet to be revealed board cards. 
+2. Create and activate a virtual environment: 
 
-This means we need to infer our opponents' hands and understand the probabilities of the cards that we can't see. 
+```bash
+python3 -m venv venv
+source venv/bin/activate
+```
 
-Poker is useful from a math perspective -- probability, expected value, risk, and bankroll management are all important skills. 
+You should now see `(venv)` at the beginning of your command prompt, indicating that the virtual environment is active.
 
-It's also useful from a psychological perspective -- emotional control, reading opponents, and adapting to other players are all valuable. 
+3. Create a Python file `c2c.py`. From the command line: 
 
-We learn to make decisions and focus on the quality of the decision, rather than the results. 
+```bash
+touch c2c.py
+```
 
-### Why build a poker bot? 
-Poker has clear rules and structure, so we can apply reinforcement learning where the rewards are the profits in the game. Reinforcement learning, game theory, and Monte Carlo methods are applicable across many domains. 
+4. Deactivating and reactivating the virtual environment: 
 
-Here we mainly focus on a simplified poker game that can be solved in under a minute, but the same core principles apply for scaled up versions that are much larger and more complex, though they will also involve approximating states of the game. 
+To deactivate: 
 
-The richness of the game is an ideal testbed for decision making under uncertainty, probabilistic reasoning, and taking actions that can have both immediate and longer horizon consequences. 
+```bash
+deactivate
+```
 
-We can use the bot solutions to gain insights from the underlying game itself. For example, you'll see that bots automatically learn to bluff, showing that this is a theoretically correct play and not a "loss leader" just to get more action later. 
+To reactivate: 
 
-Beyond building a basic bot, there is a broad area for further research, including agent evaluation, opponent modeling, building an LLM model on top of the traditional poker agent, and intepretability of the agent. 
+```bash
+source venv/bin/activate
+```
 
-## Modern AI agents
-LLM-based AI agents are very popular in 2024. The poker bot we’re building here is different and uses the classic AI method of reinforcement learning, where the goal is to maximize long-term reward given feedback from the environment (i.e. maximizing winnings in a poker game). 
+### Step 2: Import and install packages
+Install `numpy`, which we will use later. 
 
-The poker bot learns how to make optimal decisions given a state of the game by repeatedly playing the game against itself and optimizing the strategy over time. 
+```bash
+pip install numpy
+```
 
-LLM agents generally use large amounts of text data to understand and generate human-like language based on patterns in the data, which could include strategy in a game like poker. 
+## Face up 1-card poker 
+We'll start by setting up a poker game with a 3-card deck where the cards are given values {0, 1, 2}. Each player is dealt a card "face up" and the higher card wins. This is like the game [War](https://en.wikipedia.org/wiki/War_(card_game)), but even more simplified because there are no ties since the entire deck is only 3 cards. 
 
-So is RL still relevant? Yes! OpenAI recently released their o1 chain of thought model: 
+### Step 1: Imports
+Let's start by importing `numpy` and `random`. 
 
-> Our large-scale reinforcement learning algorithm teaches the model how to think productively using its chain of thought in a highly data-efficient training process.
+:::{.callout-tip collapse="true" appearance="minimal"}
+### Imports
+```python
+import numpy as np
+import random
+```
+:::
 
-In chain of thought, each step in the reasoning process can be seen as a state with possible actions. RLHF (Reinforcement Learning from Human Feedback) is also a popular technique for LLM agents where a human acts as the reward signal to shape a model’s outputs.
+### Step 2: Set up the basic structure 
+Define a `Game` class that is initialized with these class attributes: 
 
-Hybrid approaches seem promising and may be a future direction for poker agents as well. 
+- 3-card `deck` array with cards `0`, `1`, and `2`
+
+- Card placeholders for each player in a `cards` array that are initialized as `None`
+
+- Score placeholders for each player in `scores` array that are initialized as `0`
+
+:::{.callout-tip collapse="true" appearance="minimal"}
+### Initialize `Game` class
+```python
+class Game:
+    def __init__(self):
+        self.deck = [0, 1, 2]
+        self.cards = [None, None]
+        self.scores = [0, 0]
+```
+:::
+
+### Step 3: Deal cards
+Let's now add a `deal_cards` function into the `Game` class that samples two cards from the deck into `self.cards`. This is the first of two class methods. 
+
+:::{.callout-tip collapse="true" appearance="minimal"}
+### `deal_cards` function
+```python
+    def deal_cards(self):
+        self.cards = random.sample(self.deck, 2)
+```
+:::
+
+### Step 4: Play round
+Create a `play_round` function in the `Game` class that first deals the cards using `self.deal_cards` and then accumulates the scores for each player using `self.scores`. This is the second class method. 
+
+:::{.callout-tip collapse="true" appearance="minimal"}
+### `play_round` function
+```python
+    def play_round(self):
+        self.deal_cards()
+        if self.cards[0] > self.cards[1]:
+            self.scores[0] += 1
+            self.scores[1] -= 1
+        elif self.cards[0] < self.cards[1]:
+            self.scores[0] -= 1
+            self.scores[1] += 1
+```
+:::
+
+### Step 5: Run the game
+Create the `main` function that defines `num_games` as 100, creates an object of the `Game` class in `game`, and runs the game. 
+
+:::{.callout-tip collapse="true" appearance="minimal"}
+### `main` function
+```python
+def main():
+    num_games = 100
+    game = Game()
+
+    for _ in range(num_games):
+        game.play_round()
+```
+
+The `game` object now has all the attributes and methods defined in the `Game` class.
+:::
+
+### Step 6: Print the scores
+Print the scores for each player after the game ends, also in the `main` function.
+
+:::{.callout-tip collapse="true" appearance="minimal"}
+### Print scores
+```python
+
+    print(f"After {num_games} games:")
+    print(f"Player 1 score: {game.scores[0]}")
+    print(f"Player 2 score: {game.scores[1]}")
+```
+:::
+
+### Step 7: Create the main block
+
+:::{.callout-tip collapse="true" appearance="minimal"}
+### Main block
+```python
+if __name__ == "__main__":
+    main()
+```
+:::
+
+### Putting it all together
+
+:::{.callout-tip collapse="true" appearance="minimal"}
+### All the code
+```python
+import random
+
+class Game:
+    def __init__(self):
+        self.deck = [0, 1, 2]
+        self.cards = [None, None]  # Cards for player 0 and 1
+        self.scores = [0, 0]  # Scores for player 0 and 1
+
+    def deal_cards(self):
+        self.cards = random.sample(self.deck, 2)
+
+    def play_round(self):
+        self.deal_cards()
+        if self.cards[0] > self.cards[1]:
+            self.scores[0] += 1
+            self.scores[1] -= 1
+        elif self.cards[0] < self.cards[1]:
+            self.scores[0] -= 1
+            self.scores[1] += 1
+
+def main():
+    num_games = 100
+    game = Game()
+
+    for _ in range(num_games):
+        game.play_round()
+
+    print(f"After {num_games} games:")
+    print(f"Player 1 score: {game.scores[0]}")
+    print(f"Player 2 score: {game.scores[1]}")
+
+if __name__ == "__main__":
+    main()
+```
+:::
+
+### Run the code
+```python
+python3 c2c.py
+```
+
+The output should look something like: 
+
+:::{.callout-tip collapse="true" appearance="minimal"}
+### Sample code output from 100 games
+```bash
+After 100 games:
+Player 1 score: -12
+Player 2 score: 12
+```
+:::
