--- a/1_gametheory.qmd
+++ b/1_gametheory.qmd
@@ -16,9 +16,9 @@ We can also think about games along the axis of **fixed or random opponents** an
 
 | Game/Opponent     | Fixed/Random Opponent | Adversarial Opponent | 
 |------------|-----------|--------|
-| **No Player Agency/Decisions**      | Candy Land, War, Dreidel, Bingo, Snakes and Ladders, Slot machine          | Blackjack dealer
+| **No Player Agency/Decisions**      | Candy Land, War, Dreidel, Bingo, Snakes and Ladders         | Blackjack dealer
 | **Perfect Info**     | Puzzles, Rubix cube  | Tictactoe, Checkers, Chess, Arimaa, Go, Connect Four |
-| **Perfect Info with Randomness**     |   | Backgammon |
+| **Perfect Info with Randomness**     | Monopoly, Risk   | Backgammon |
 | **Imperfect Info**    | Wordle, Blackjack  | Poker, Rock Paper Scissors, Figgie, StarCraft |
 
 ### Perfect information games
@@ -36,12 +36,12 @@ The goal of a game is to maximize the "utility", which is usually a score or mon
 
 There are two fundamental strategies: 
 
-1. **Exploiting opponent weaknesses:** Capitalize on specific flaws or tendencies of opponents, while putting yourself at risk if the opponent adapts well
+1. **Exploiting opponent weaknesses:** Capitalize on specific flaws or tendencies of opponents, while putting yourself at risk if the opponent adapts well.
 
 2. **Being unexploitable:** Playing a balanced, theoretically sound strategy, also known as "game theory optimal". This does not maximize against weaker opponents, but rather aims to minimize losses against any possible opponents. 
 
 ## Rock Paper Scissors
-![Image by [Enzoklop](https://en.wikipedia.org/wiki/Rock_paper_scissors#/media/File:Rock-paper-scissors.svg) under [CC BY-SA 3.0](https://creativecommons.org/licenses/by-sa/3.0/)](rps.png){width=50%}
+![Image by [Enzoklop](https://en.wikipedia.org/wiki/Rock_paper_scissors#/media/File:Rock-paper-scissors.svg) under [CC BY-SA 3.0](https://creativecommons.org/licenses/by-sa/3.0/)](assets/rps.png){width=50%}
 
 - Rock defeats scissors, scissors defeats paper, and paper defeats rock
 - You get +1 point for a win, -1 for a loss, and 0 for ties
@@ -50,23 +50,23 @@ This simple game was the subject of a DeepMind paper in 2023, where they wrote:
 
 > In sequential decision-making, agent evaluation has largely been restricted to few interactions against experts, with the aim to reach some desired level of performance (e.g. beating a human professional player). We propose a benchmark for multiagent learning based on repeated play of the simple game Rock, Paper, Scissors.
 
-Let's dig into why RPS is a more interesting game than it might seem. 
+Let's dig in to why RPS is a more interesting game than it might seem. 
 
 ### Payoff Matrix
 The core features of a game are its players, the actions of each player, and the payoffs. We can show this for RPS in the below payoff matrix, also known as normal-form.
 
 | Player 1/2 | Rock    | Paper   | Scissors |
 |--------|---------|---------|----------|
-| Rock   | (0, 0)  | (-1, 1) | (1, -1)  |
-| Paper  | (1, -1) | (0, 0)  | (-1, 1)  |
-|Scissors| (-1, 1) | (1, -1) | (0, 0)   |
+| **Rock**   | (0, 0)  | (-1, 1) | (1, -1)  |
+| **Paper**  | (1, -1) | (0, 0)  | (-1, 1)  |
+| **Scissors** | (-1, 1) | (1, -1) | (0, 0)   |
 
 The payoffs for Player 1 are on the left and for Player 2 on the right in each payoff outcome of the game. For example, the bottom left payoff is when Player 1 plays Scissors and Player 2 plays Rock, resulting in -1 for P1 and +1 for P2. 
 
 ### Expected Value
 A strategy says which actions you would take for every state of the game.
 
-Expected value represents the average outcome of a strategy if it were repeated many times. It’s calculated by multiplying each possible outcome by its probability of occurrence and then summing these products.
+**Expected value** represents the average outcome of a strategy if it were repeated many times. It’s calculated by multiplying each possible outcome by its probability of occurrence and then summing these products.
 
 Suppose that  Player 1 plays the strategy: 
 
@@ -90,33 +90,33 @@ $$
 
 Let's add these to the matrix: 
 
-| Player 1/2 | Rock ($r=0.1$)   | Paper ($p=0.3$)  | Scissors ($s=0.6$) |
+| Player 1/2 | Rock ($r_2=0.1$)   | Paper ($p_2=0.3$)  | Scissors ($s_2=0.6$) |
 |--------|---------|---------|----------|
-| Rock ($r=0.5$)   | (0, 0)  | (-1, 1) | (1, -1)  |
-| Paper ($p=0.25$) | (1, -1) | (0, 0)  | (-1, 1)  |
-| Scissors ($s=0.25$) | (-1, 1) | (1, -1) | (0, 0)   |
+| **Rock ($r_1=0.5$)**  | (0, 0)  | (-1, 1) | (1, -1)  |
+| **Paper ($p_1=0.25$)** | (1, -1) | (0, 0)  | (-1, 1)  |
+| **Scissors ($s_1=0.25$)** | (-1, 1) | (1, -1) | (0, 0)   |
 
 To simplify, let's just write the payoffs for Player 1 since payoffs for Player 2 will simply be the inverse: 
 
-| Player 1/2 | Rock ($r=0.1$)   | Paper ($p=0.3$)  | Scissors ($s=0.6$) |
+| Player 1/2 | Rock ($r_2=0.1$)   | Paper ($p_2=0.3$)  | Scissors ($s_2=0.6$) |
 |--------|---------|---------|----------|
-| Rock ($r=0.5$)   | 0  | -1 | 1 |
-| Paper ($p=0.25$) | 1 | 0  | -1 |
-| Scissors ($s=0.25$) | -1 | 1 | 0 |
+| **Rock ($r_1=0.5$)**   | 0  | -1 | 1 |
+| **Paper ($p_1=0.25$)** | 1 | 0  | -1 |
+| **Scissors ($s_1=0.25$)** | -1 | 1 | 0 |
 
 Now we can multiply the player action strategies together to get a percentage occurrence for each payoff in the matrix: 
 
 | Player 1/2 | Rock ($r_2=0.1$)   | Paper ($p_2=0.3$)  | Scissors ($s_2=0.6$) |
 |--------|---------|---------|----------|
-| Rock ($r_1=0.5$)   | 0 ($0.5(0.1) = 0.05$) | -1 ($0.5(0.3) = 0.15$) | 1 ($0.5(0.6) = 0.3$) |
-| Paper ($p_1=0.25$) | 1 ($0.25(0.1) = 0.025$) | 0  ($0.25(0.3) = 0.075$) | -1 ($0.25(0.6) = .15$) |
-| Scissors ($s_1=0.25$) | -1 ($0.25(0.1) = 0.025$) | 1 ($0.25(0.3) = 0.075$) | 0 ($0.25(0.6) = .15$) |
+| **Rock ($r_1=0.5$)**   | Val: 0 <br>Pr: $0.5(0.1) = 0.05$ | Val: -1 <br>Pr: $0.5(0.3) = 0.15$ | Val: 1 <br>Pr: $0.5(0.6) = 0.3$ |
+| **Paper ($p_1=0.25$)** | Val: 1 <br>Pr: $0.25(0.1) = 0.025$ | Val: 0  <br>Pr: $0.25(0.3) = 0.075$ | Val: -1 <br>Pr: $0.25(0.6) = .15$ |
+| **Scissors ($s_1=0.25$)** | Val: -1 <br>Pr: $0.25(0.1) = 0.025$ | Val: 1 <br>Pr: $0.25(0.3) = 0.075$ | Val: 0 <br>Pr: $0.25(0.6) = .15$ |
 
 Note that the total probabilities sum to 1 and each row and column sums to the probability of playing that row or column. 
 
 We can work out the expected value of the game to Player 1 (summing all payoffs multiplied by probabilities from top left to bottom right): 
 
-$\mathbb{E} = 0(0.05) + -1(0.15) + 1(0.3) + 1(0.025) + 0(0.075) + -1(0.15) + -1(0.025) + 1(0.075) + 0(0.15) = 0.075$ 
+$\mathbb{E} = 0(0.05) + -1(0.15) + 1(0.3) + 1(0.025) + 0(0.075) + -1(0.15) + -1(0.025) + 1(0.075) + 0(0.15) = 0.075$
 
 Therefore P1 is *expected* to gain 0.075 per game given these strategies. Since payoffs are reversed for P2, P2's expectation is -0.075 per game. 
 
@@ -128,25 +128,33 @@ A Nash equilibrium means that no player can improve their expected payoff by uni
 
 In RPS, the Nash equilibrium strategy is to play each action $r = p = s = 1/3$ of the time. I.e., to play totally randomly. 
 
-This is called a mixed strategy, as opposed to a pure strategy, which would select only one action. Mixed strategies are useful in games of imperfect information because it's valuable to not be predictable and to conceal your private information. In perfect information games, the theoretically optimal play would not contain any mixing (i.e. if you could calculate all possible moves to the end of the game). 
+This is called a mixed strategy, as opposed to a pure strategy, which would select only one action. Mixed strategies are useful in games of imperfect information because it's valuable to not be predictable and to conceal your private information. In perfect information games, the theoretically optimal play would not contain any mixing (i.e., if you could calculate all possible moves to the end of the game). 
 
 The equilibrium RPS strategy is worked out below: 
 
 :::{.callout-tip collapse="true" appearance="minimal"}
 ## Nash equilibrium strategy for RPS
+| Player 1/2 | Rock   | Paper  | Scissors |
+|--------|---------|---------|----------|
+| **Rock ($r$)**  | (0, 0)  | (-1, 1) | (1, -1)  |
+| **Paper ($p$)** | (1, -1) | (0, 0)  | (-1, 1)  |
+| **Scissors ($s$)** | (-1, 1) | (1, -1) | (0, 0)   |
+
 If Player 1 plays Rock with probability $r$, Paper with probability $p$, and Scissors with probability $s$, we have the following expected value equations for Player 2: 
 
-$\mathbb{E}(\text{R}) = -1p + 1s$
+$\mathbb{E_2}(\text{R}) = -1p + 1s$
 
-$\mathbb{E}(\text{P}) = 1r - 1s$
+$\mathbb{E_2}(\text{P}) = 1r - 1s$
 
-$\mathbb{E}(\text{S}) = -1r + 1p$
+$\mathbb{E_2}(\text{S}) = -1r + 1p$
+
+(To see each of these, sum the payoffs for each column with P2 payoffs and P1 probabilities.)
 
 Since no action dominates, we know that the EV of every strategic action should be equal  (since if a certain strategy was best, we'd want to always play that strategy). 
 
 To solve for $r$, $p$, and $s$, we can start by setting these EVs equal: 
 
-$\mathbb{E}(\text{R}) = \mathbb{E}(\text{P})$
+$\mathbb{E_2}(\text{R}) = \mathbb{E_2}(\text{P})$
 
 $-1p + 1s = 1r - 1s$
 
@@ -154,7 +162,7 @@ $2s = p + r$
 
 Then setting these equal: 
 
-$\mathbb{E}(\text{R}) = \mathbb{E}(\text{S})$
+$\mathbb{E_2}(\text{R}) = \mathbb{E_2}(\text{S})$
 
 $-1p + 1s = -1r + 1p$
 
@@ -162,7 +170,7 @@ $s + r = 2p$
 
 And finally setting these equal: 
 
-$\mathbb{E}(\text{P}) = \mathbb{E}(\text{S})$
+$\mathbb{E_2}(\text{P}) = \mathbb{E_2}(\text{S})$
 
 $1r - 1s = -1r + 1p$
 
@@ -221,6 +229,8 @@ $r = 1/3$
 So all actions are taken with probability $1/3$: 
 
 $r = p = s = 1/3 \quad \blacksquare$
+
+By symmetry, the same equilibrium strategy is true for Player 2. 
 :::
 
 Playing this strategy means that whatever your opponent does, you will breakeven! For example, think about an opponent that always plays Rock. 
@@ -234,6 +244,10 @@ $$
 \end{split}
 \end{equation}
 $$
+
+How about the case of the opponent playing 60% Rock, 20% Paper, 20% Scissors? 
+
+$\mathbb{E}(\text{Equilibrium vs. 622}) = 0.6(\frac{1}{3}) + 1(p) + -1(s)$
 
 ### Exploiting vs. Nash
 The equilibrium strategy vs. a pure Rock opponent is a useful illustration of the limitations of playing at equilibrium. The Rock opponent is playing the worst possible strategy, yet equilibrium is still breaking even. 
@@ -253,27 +267,30 @@ indifference guarantees can't improve by changing unliterally
 
 
 ## Clairvoyance Poker 
-Back to poker. We built **Face-up 3-card Poker** where each player was dealt a card from the deck of {0, 1, 2} and the high card won. 
+Back to poker. We previously built **Face-up 3-card Poker** where each player was dealt a card from the deck of {0, 1, 2} and the high card won. 
 
 Now we're going to make the game more interesting. 
 
 - Player 1 will *always* be dealt card 1. 
 
-- Player 2 will be dealt randomly from {0, 2}. This card is not known to P1. 
+- Player 2 will be dealt randomly from {0, 2}.
 
 - P1 knows P2 has either card 0 or 2, but not which. P2 knows that P1 has card 1. 
 
 Let's modify the code: 
 
+:::{.callout-tip collapse="true" appearance="minimal"}
+### Update `deal_cards` function
 ```python
     def deal_cards(self):
         self.cards[0] = 1
         remaining_cards = [card for card in self.deck if card != self.cards[0]]
         self.cards[1] = random.choice(remaining_cards)
 ```
+:::
 
 ### Equity in Poker
-
+show same equity 
 
 ### Betting Rules and Sequences 
 - Both players ante 1 chip, so the starting pot is 2
@@ -292,6 +309,8 @@ There are three possible ways for the hand to end:
 - Bet Call: Pot 4, hands go to *showdown* and player with highest card wins 2 (the ante + bet)
 - Bet Fold: Pot 3, player who bets wins 1 (the ante)
 
+--> Add pot size stuff 
+
 ### Starting Strategies
 Let's hard-code some initial strategies for both players. 
 
@@ -301,7 +320,7 @@ Let's hard-code some initial strategies for both players.
 
 This strategy randomizes uncertain decisions and takes clearly smart decisions when possible. 
 
-Why? 
+What does that mean? 
 
 - P2 call with card 2 after P1 bet: This is the best hand and guarantees a win
 
@@ -309,12 +328,46 @@ Why?
 
 - P2 bet with card 2 after P1 check: This is the best card and betting can only possibly win additional chips
 
+---> show wins/losses, frequency, total for each strategic decision
+P1 bet, P1 check/call, P1 check/fold
+P2 0 after bet call, P2 0 after bet fold, P2 0 after check bet, P2 0 after check check
+P2 2 after bet call, P2 2 after bet fold, P2 2 after check bet, P2 2 after check check
+
 ### Dominated Strategy 
+Note that P1 betting is strictly worse and why 
+
+### Your Strategies
+---> Try strat for P1 then for P2
+See results
 
 ### Indifference in Poker 
+Figuring out strategy for 0 facing check, actually thinking about strategy for 0 and 2. goal indifference
+
+EV folding 0, EV calling should also be 0 
+
+shows EV = bluff*3 - value*1 (but this is for overall range 1/4 bluffs)
+
+bluff to value ratio bet/(bet+pot)
+
+Figuring out strategy for 1 after check/bet
+
+bluffing frequency goes up as bet size gets larger relative to pot
+
+Only mix when both same EV 
+
+
+call strategy wants indifferent between betting and checking card 0 
+checking 0 has EV 0
+betting 0 also needs to have EV 0
+
+EV = fold*2 - call*1
+get call = 2/3 
+1 - bet/(bet+pot)
+larger bet means call less, let them get away with bluffs the bigger they bet
 
 ### Equity vs. Expected Value 
-
+can tell opponent strategy to bet 1/3 0s but can't stop 
+call more catches more bluffs, but pays off more value bets
 
 Sometimes have to bluff with bad cards because EV higher than if you 
 always folded with bad cards. 
@@ -322,3 +375,4 @@ always folded with bad cards.
 Add uncertainty the opponent has to think about in counter-strategy
 If always folded bad cards, opponent knows you keep playing with good # 
 
+### Bonus: Ideal Bet Size
