--- a/1_gametheory.qmd
+++ b/1_gametheory.qmd
@@ -247,12 +247,265 @@ $$
 
 How about the case of the opponent playing 60% Rock, 20% Paper, 20% Scissors? 
 
-$\mathbb{E}(\text{Equilibrium vs. 622}) = 0.6(\frac{1}{3}) + 1(p) + -1(s)$
+$$
+\begin{equation}
+\begin{split}
+\mathbb{E}(\text{Equilibrium vs. 622}) &= 0.6(\text{Result vs. Rock}) \\ 
++ 0.2(\text{Result vs. Paper}) \\  
++ 0.2(\text{Result vs. Scissors}) \\
+&= 0.6(0) + 0.2(0) + 0.2(0)
+&= 0
+\end{split}
+\end{equation}
+$$
+
+The random strategy will result in 0 against any pure strategy and any combination of strategies including the random strategy. 
 
 ### Exploiting vs. Nash
-The equilibrium strategy vs. a pure Rock opponent is a useful illustration of the limitations of playing at equilibrium. The Rock opponent is playing the worst possible strategy, yet equilibrium is still breaking even. 
+The equilibrium strategy vs. a pure Rock opponent is a useful illustration of the limitations of playing at equilibrium. The Rock opponent is playing the worst possible strategy, yet equilibrium is still breaking even! 
+
+What's the best that we could do against Rock only? We could play **purely paper**. 
+
+$$
+\begin{equation}
+\begin{split}
+\mathbb{E}(\text{Paper vs. Rock Only}) &= 1(r) + 0(p) + -1(s) && \Rightarrow \text{Paper vs. all opponent probs} \\
+&= 1(1) + 0(0) + -1(0) && \Rightarrow \text{Opponent only plays } r \\
+&= 1
+\end{split}
+\end{equation}
+$$
+
+We'd win 1 each game playing Paper vs. Rock. 
+
+How about against the opponent playing 60% Rock, 20% Paper, 20% Scissors? Here we can see that because they are overplaying Rock, our best strategy is again to always play Paper.
+
+$$
+\begin{equation}
+\begin{split}
+\mathbb{E}(\text{Paper vs. 622}) &= 1(r) + 0(p) + -1(s) && \Rightarrow \text{Paper vs. all opponent probs} \\
+&= 1(0.6) + 0(0.2) + -1(0.2) && \Rightarrow \text{Opponent plays } 622 \\
+&= 0.6 + 0 - 0.2 
+&= 0.4
+\end{split}
+\end{equation}
+$$
 
 ## Soccer Kicker vs. Goalie
+Consider the **Soccer Penalty Kick** game where a Kicker is trying to score a goal and the Goalie is trying to block it. 
+
+| Kicker/Goalie | Lean Left | Lean Right | 
+|------------|-----------|--------|
+| Kick Left  | 0, 0  | +2, -2 |
+| Kick Right | +1, -1 | 0, 0|
+
+The game setup is zero-sum. If Kicker and Goalie both go in one direction, then it’s assumed that the goal will miss and both get $0$ payoffs. If the Kicker plays Kick Right when the Goalie plays Lean Left, then the Kicker is favored and gets a payoff of $+1$. If the Kicker plays Kick Left when the Goalie plays Lean Right, then the kicker is even more favored, because it’s easier to kick left than right, and gets $+2$.
+
+:::{.callout-note  appearance="minimal"}
+## Nash Equilibrium Exercise
+
+Which of these, if any, is a Nash equilibrium? You can check by seeing if either player would benefit by changing their action. 
+
+| Kicker | Goalie | Equilibrium or Change? | 
+|------------|-----------|--------|
+| Left  | Left  |  |
+| Left | Right | |
+| Right | Left | |
+| Right | Right | |
+
+:::
+
+:::{.callout-warning collapse="true" appearance="minimal"}
+## Solution
+
+There are no pure Nash equilibrium solutions because when the actions match, the Kicker will always want to change, and when they don’t match, the Goalie will always want to change. 
+
+| Kicker | Goalie | Equilibrium or Change? | 
+|------------|-----------|--------|
+| Left  | Left  | Kicker changes to right  |
+| Left | Right | Goalie changes to left |
+| Right | Left | Goalie changes to right |
+| Right | Right | Kicker changes to left |
+:::
+
+
+:::{.callout-note  appearance="minimal"}
+## Expected Value Exercise
+Assume that they both play Left 50% and Right 50% -- what is the expected value of the game? 
+
+:::
+
+:::{.callout-warning collapse="true" appearance="minimal"}
+## Solution
+
+| Kicker/Goalie | Lean Left (0.5) | Lean Right (0.5) | 
+|------------|-----------|--------|
+| Kick Left (0.5) | 0, 0  | +2, -2 |
+| Kick Right (0.5) | +1, -1 | 0, 0|
+
+We apply these probabilities to each of the 4 outcomes: 
+
+| Kicker/Goalie | Lean Left (0.5) | Lean Right (0.5) | 
+|------------|-----------|--------|
+| Kick Left (0.5) | 0, 0 (0.25) | +2, -2 (0.25) |
+| Kick Right (0.5) | +1, -1 (0.25) | 0, 0 (0.25) |
+
+Now for the Kicker, we have $\mathbb{E} = 0.25*0 + 0.25*2 + 0.25*1 + 0.25*0 = 0.75$. 
+
+Since it's zero-sum, we have $\mathbb{E} = -0.75$ for the Goalie.
+
+Note that, for example, the Kicker playing 50% Left and 50% Right could be interpreted as a single player having these probabilities or a field of players averaging to these probabilities. So out of 100 players, this could mean: 
+
+- 100 players playing 50% Left and 50% Right
+- 50 players playing 100% Left and 50 players playing 100% Right
+- 50 players playing 75% Left/25% Right and 50 players playing 25% Left/75% right
+
+:::
+
+When the Goalie plays left with probability $p$ and right with probability $1-p$, we can find the expected value of the Kicker actions.
+
+| Kicker/Goalie | Lean Left (p) | Lean Right (1-p) | 
+|------------|-----------|--------|
+| Kick Left | 0, 0  | +2, -2 |
+| Kick Right | +1, -1 | 0, 0|
+
+$\mathbb{E}(\text{Kick Left}) = 0*p + 2*(1-p) = 2 - 2*p$
+
+$\mathbb{E}(\text{Kick Right}) = 1*p + 0*(1-p) = 1*p$
+
+The Kicker is going to play the best response to the Goalie’s strategy. The Goalie wants to make the Kicker **indifferent** to Kick Left and Kick Right because if the Kicker was not going to be indifferent, then he would prefer one of the actions, meaning that action would be superior to the other. Therefore the Kicker will play a mixed strategy in response that will result in a Nash equilibrium where neither player benefits from unilaterally changing strategies. (Note that indifferent does not mean 50% each, but means the expected value is the same for each.)
+
+![](assets/kickergoalieplot.png)
+
+By setting the values equal, we get $2 - 2*p = 1*p \Rightarrow p = \frac{2}{3}$ as shown in the plot. This means that $1-p = 1 - \frac{2}{3} = \frac{1}{3}$. Therefore the Goalie should play Lean Left $\frac{2}{3}$ and Lean Right $\frac{1}{3}$. The value for the Kicker is $\frac{2}{3}$, or $(0.67)$, for both actions, regardless of the Kicker's mixing strategy. 
+
+Note that the Kicker is worse off now ($0.67$ now compared to $0.75$) than when both players played 50% each action. Why?
+
+If the Kicker plays Left with probability $q$ and Right with probability $1-q$, then the Goalie’s values are: 
+
+$\mathbb{E}(\text{Lean Left}) = 0*q - 1*(1-q) = -1 + q$
+
+$\mathbb{E}(\text{Lean Right}) = -2*q + 0 = -2*q$
+
+Setting equal, 
+
+$$
+\begin{equation}
+\begin{split}
+-1 + q &= -2*q \\
+-1 &= -3*q  \\
+\frac{1}{3} &= q
+\end{split}
+\end{equation}
+$$
+
+Therefore the Kicker should play Left $\frac{1}{3}$ and Right $\frac{2}{3}$, giving a value of $-\frac{2}{3}$ to the Goalie. 
+
+We can see this from the game table: 
+
+| Kicker/Goalie | Lean Left ($\frac{2}{3}$) | Lean Right ($\frac{1}{3}$) | 
+|------------|-----------|--------|
+| Kick Left ($\frac{1}{3}$) | 0, 0 ($\frac{2}{9}$) | +2, -2 ($\frac{1}{9}$) |
+| Kick Right ($\frac{2}{3}$) | +1, -1 ($\frac{4}{9}$) | 0, 0 ($\frac{2}{9}$)|
+
+Therefore the expected payoffs in this game are $\frac{2}{9}*0 + \frac{1}{9}*2 + \frac{4}{9}*1 + \frac{2}{9}*0 = \frac{6}{9} = 0.67$ for the Kicker and $-0.67$ for the Goalie. 
+
+In an equilibrium, no player should be able to unilaterally improve by changing their strategy. What if the Kicker switches to always Kick Left?
+
+| Kicker/Goalie | Lean Left ($\frac{2}{3}$) | Lean Right ($\frac{1}{3}$) | 
+|------------|-----------|--------|
+| Kick Left ($1$) | 0, 0 ($\frac{2}{3}$) | +2, -2 ($\frac{1}{3}$) |
+| Kick Right ($0$) | +1, -1 ($0$) | 0, 0 ($0$)|
+
+Now the Kicker's payoff is still $\frac{1}{3}*2 = 0.67$. 
+
+When a player makes their opponent indifferent, this means that any action the opponent takes (within the set of equilibrium actions) will result in the same payoff! 
+
+So if you know your opponent is playing the equilibrium strategy, then you can actually do whatever you want with no penalty with the mixing actions. Sort of. 
+
+The risk is that the opponent can now deviate from equilibrium and take advantage of your new strategy. For example, if the Goalie caught on and moved to always Lean Left, then expected value is reduced to $0$ for both players. 
+
+To summarize, you can only be penalized for not playing the equilibrium mixing strategy if your opponent plays a non-equilibrium strategy that exploits your strategy. 
+
+:::{.callout-note  appearance="minimal"}
+## Indifference
+Why do players make their opponent indifferent?
+:::
+
+## Indifference in Poker 
+Back to poker. We can apply this indifference principle in computing equilibrium strategies in poker. When you make your opponent indifferent, then you don’t give them any best play. 
+
+Important note: If you play an equilibrium strategy, opponents will only get penalized for playing hands outside of the set of hands in the mixed strategy equilibrium (also known as the support, or the set of pure strategies that are played with non-zero probability under the mixed strategy). If opponents are not playing equilibrium, though, then they open themselves up to exploitation. 
+
+Let’s look at one particular situation in Kuhn Poker and work it out by hand. Suppose that you are Player 2 with card Q after a Check from Player 1.
+
+![](assets/kuhnindiff.png)
+
+:::{.callout-note  appearance="minimal"}
+## Expected Value Exercise
+What indifference is Player 2 trying to induce? Compute it.
+
+:::
+
+:::{.callout-warning collapse="true" appearance="minimal"}
+## Solution
+Making P1 indifferent between calling and folding with a K 
+
+We can work out Player 2's betting strategy by calculating the indifference. Let $b$ be the probability that P2 bets with a Q after P1 checks. 
+
+\begin{equation}
+\begin{split}
+\mathbb{E}(\text{P1 Check K then Fold to Bet}) &= 0 \\
+\\
+
+\mathbb{E}(\text{P1 Check K then Call Bet}) &= -1*\Pr(\text{P2 has A and Bets}) + 3*\Pr(\text{P2 has Q and Bets}) \\
+  &= -1*\frac{1}{2} + 3*\frac{1}{2}*b \\
+  &= -0.5 + 1.5*b
+\end{split}
+\end{equation}
+
+Setting these equal: 
+
+$0 = -0.5 + 1.5*b$ 
+
+$b = \frac{1}{3}$
+
+Therefore in equilibrium, P2 should bet $\frac{1}{3}$ with Q after P1 checks.  
+:::
+
+:::{.callout-note  appearance="minimal"}
+## Equilibrium Mixed Strategy Change Exercise
+If P2 bet $\frac{2}{3}$ instead of $\frac{1}{3}$ with Q after P1 checks and P1 is playing an equilibrium strategy, how would P2’s expected value change? 
+
+:::
+
+:::{.callout-warning collapse="true" appearance="minimal"}
+## Solution
+It wouldn't! As long as P1 doesn't modify their equilibrium strategy, then P2 can mix his strategy (at mixing infosets) however he wants and have the same EV. 
+
+:::
+
+:::{.callout-note  appearance="minimal"}
+## Bluff:Value Ratio Exercise
+Given that P2 has bet after P1 checks and is playing the equilibrium strategy, what is the probability that they are bluffing?
+
+(Note: Including cases where you have an A, so Q bets are bluffs and A bets are value bets.)
+
+:::
+
+:::{.callout-warning collapse="true" appearance="minimal"}
+## Solution
+P2 has Q and A each $\frac{1}{2}$ of the time. 
+
+P2 is betting Q $\frac{1}{3}$ of the time (bluffing). 
+
+P2 is betting A always (value betting). 
+
+Therefore for every 3 times you have Q you will bet once and for every 3 times you have A you will bet 3 times. Out of the 4 bets, 1 of them is a bluff. 
+
+$\Pr(\text{P2 Bluff after P1 Check}) = \frac{1}{4}$
+
+:::
 
 ### Deviating from Nash
 
